Tue 06 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release v0.0.3
	* Fix `word-wrap` issue with CSS on Firefox (example)
	* Refactor code style
	* Add keymap and macro
	* Release v0.0.2
	* Setup unit/e2e testing

Mon 05 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Fix version dependency
	* Release v0.0.1
	* Name project as Vergil

Sun 04 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit ;)