@@ -1,3 +1,6 @@
+Wed 07 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add className
+
 Tue 06 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Release v0.0.3
 	* Fix `word-wrap` issue with CSS on Firefox (example)
